c4prj2_input/grade.txt
Grading at Tue Aug 28 16:08:25 UTC 2018
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:34:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if(h =! 1) return NULL;
   ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
